feat(jvm)